// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStatus should match snapshot, away status 1`] = `
<CompassIcon
  name="clock"
  style={
    {
      "color": "#ffbc1f",
      "fontSize": 32,
    }
  }
  testID="user_status.icon.away"
/>
`;

exports[`UserStatus should match snapshot, dnd status 1`] = `
<CompassIcon
  name="minus-circle"
  style={
    {
      "color": "#d24b4e",
      "fontSize": 32,
    }
  }
  testID="user_status.icon.dnd"
/>
`;

exports[`UserStatus should match snapshot, online status 1`] = `
<CompassIcon
  name="check-circle"
  style={
    {
      "color": "#3db887",
      "fontSize": 32,
    }
  }
  testID="user_status.icon.online"
/>
`;

exports[`UserStatus should match snapshot, should default to offline status 1`] = `
<CompassIcon
  name="circle-outline"
  style={
    {
      "color": "rgba(184,184,184,0.64)",
      "fontSize": 32,
    }
  }
  testID="user_status.icon.offline"
/>
`;
